update for this week's changes. Cleaner

--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.53
+@version     1.0.54
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -82,7 +82,7 @@ domain("wikifunctions.org") {
     }
   }
   @media screen and (max-width: 999px) {
-    .mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container #mw-panel {
+    #mw-sidebar-checkbox:checked ~ .vector-sidebar-container  {
       border: 1px lightgray solid
     }
   }
@@ -103,12 +103,12 @@ domain("wikifunctions.org") {
   }
   
 /* Reduce gap above Page-title */
-  .vector-layout-grid .mw-page-container-inner {
-    row-gap: 0;
+  .vector-layout-grid .mw-page-container-inner, .mw-page-container-inner {
+    row-gap: 0 !important;
   }
   
 /* Reduce the grid gutter, and header height */
-  .vector-layout-grid .mw-page-container-inner {
+  .vector-layout-grid .mw-page-container-inner,.mw-page-container-inner {
     grid-template: 55px min-content min-content 1fr min-content / 220px 15px minmax(0, 1fr);
     grid-template-areas: 'header header header' 
       'sitebanner sitebanner sitebanner'
@@ -132,19 +132,19 @@ domain("wikifunctions.org") {
     top: -1.4em;
   }
 
-/* Nudge the Content and ToC inwards, if site-sidebar is uncollapsed 
-  -- ASSUMES YOU ARE ALSO USING THE "MIN/MAX WIDTH" CSS */
+/* Nudge the Content and ToC inwards, if site-sidebar is uncollapsed */
   /* Content nudge */
   @media screen and (max-width: 999px) and (min-width:550px) {
     #mw-sidebar-checkbox:checked ~ .mw-content-container {
       padding-left: 150px
     }
   }
-  /* STILL BROKEN, IDK WHY ?!?!  */
+
+  /* STILL BROKEN, IDK WHY ?!?!  Is it a hierarchy issue?? */
   /* ToC-button nudge */
-  @media screen and (max-width: 999px) and (min-width:550px) {
-    #mw-sidebar-checkbox:not(:checked) ~ #vector-toc-collapsed-button {
-      left: 150px;
+  @media screen and (max-width: 999px) {
+    .vector-below-page-title #vector-toc-collapsed-button {
+      left: 150px !important;
     }
   } 
   /* ToC nudge */
@@ -154,7 +154,7 @@ domain("wikifunctions.org") {
     }
   } 
 
-  /* Remove gap in larger windows, when sidebar and ToC are collapsed */
+  /* Remove gap in larger windows, when sidebar and ToC are collapsed -- NO LONGER NEEDED?? 
   @media screen and (min-width:1000px) {
     .vector-toc-collapsed #mw-sidebar-checkbox:not(:checked) ~ .mw-content-container {
       margin-left: -200px !important;
@@ -164,11 +164,11 @@ domain("wikifunctions.org") {
     .vector-toc-collapsed #mw-sidebar-checkbox:not(:checked) ~ .mw-content-container {
       margin-left: -200px !important;
     }
-  }   
+  }    */
   
 /* Force Main Menu to show when scrolled, if TOC is only at pop-out widths  */
   @media screen and (max-width: 999px) {
-    .mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container #mw-panel {
+    #mw-sidebar-checkbox:checked ~ .vector-sidebar-container  {
       top: 54px;
       position: fixed;
       z-index: 4;
