grah, still broken

--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.55
+@version     1.0.56
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -154,7 +154,7 @@ domain("wikifunctions.org") {
     }
   } 
 
-  /* Remove gap in larger windows, when sidebar and ToC are collapsed  */ 
+  /* Remove gap in larger windows, when sidebar and ToC are collapsed -- NO LONGER WORKS
   @media screen and (min-width:1000px) {
     .vector-toc-collapsed #mw-sidebar-checkbox:not(:checked) ~ .mw-content-container {
       margin-left: -200px !important;
@@ -164,7 +164,7 @@ domain("wikifunctions.org") {
     .vector-toc-collapsed #mw-sidebar-checkbox:not(:checked) ~ .mw-content-container {
       margin-left: -200px !important;
     }
-  }   
+  }    */ 
     
   /* fix toc in >1000px when collapsed*/
   .vector-below-page-title #vector-toc-collapsed-button {
