--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.66
+@version     1.0.67
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -268,6 +268,7 @@ Reduces original sticky header to article links (talk, history, watch, edit).
     width: 100%;
     top: 0;
     left:0;
+    padding: 0;
   }
   /* Nudge content down to account for no-default gap */
   @media screen and (max-width: 999px) {
