--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.64
+@version     1.0.65
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -117,22 +117,29 @@ domain("vrt-wiki.wikimedia.org") {
       'footer footer footer';
   }
 }
+
+#siteNotice {
+  margin: 5px
+}
   
 /* Reduce page-toolbar height */
-.vector-menu-tabs .mw-list-item > a, 
-.mw-article-toolbar-container .vector-menu-dropdown > a, 
+.vector-menu-tabs .mw-list-item.vector-tab-noicon > a, 
+.mw-article-toolbar-container .vector-menu-dropdown.vector-tab-noicon > a, 
+.vector-menu-tabs .mw-list-item > a:not(.mw-ui-icon), 
+.mw-article-toolbar-container .vector-menu-dropdown > a:not(.mw-ui-icon), 
 .vector-menu-tabs .mw-list-item .vector-menu-heading, 
 .mw-article-toolbar-container .vector-menu-dropdown .vector-menu-heading {
-  padding-bottom: 5px;
+  padding: 5px 0 5px 0;
 }
 .vector-article-toolbar {
-  max-height: 35px;
+  max-height: 30px;
 }
 .mw-article-toolbar-container {
   border-bottom: none;
+  box-shadow: none
 }
 .skin-vector-2022 #coordinates {
-  top: -1.4em;
+  top: -0.9em;
 }
 
 /* Nudge the Content and ToC inwards, if site-sidebar is uncollapsed */
